<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/landingBlack"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="0dp"
    tools:showIn="@layout/activity_login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="30dp">

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp">

                <LinearLayout
                    android:id="@+id/scrollContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser1" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser2" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser3" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser4" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser5" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser6" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser7" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser8" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser9" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser10" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser11" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:src="@drawable/scrolluser1" />
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/landing_logo" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/circle_landing" />

            </RelativeLayout>

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Phone number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:visibility="gone" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary" />

            <EditText
                android:id="@+id/confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_confirm_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_up"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/landing_button"
                    android:text="@string/action_sign_in"
                    android:textColor="@color/textWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/email_sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/landing_button"
                    android:text="@string/action_sign_up"
                    android:textColor="@color/textWhite"
                    android:textStyle="bold" />

            </RelativeLayout>

            <ImageButton
                android:id="@+id/li_sign_in"
                style="?android:textAppearanceSmall"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:adjustViewBounds="true"
                android:background="@color/landingBlack"
                android:scaleType="fitCenter"
                android:src="@drawable/li_sign_in" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/li_sign_in"
                android:layout_centerHorizontal="true" />

            <Button
                android:id="@+id/forgot_pass_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/landing_button"
                android:text="Forgot Password?"
                android:textColor="@color/textWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text=""
                android:textColor="@color/textWhite" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/forgot_pass_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/landingBlack"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/landingBlack"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:text="@string/forgot_pass_heading"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:text="Authentication Code"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/authCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/et_bottom_line"
                    android:ellipsize="end"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="New Password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/newPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/et_bottom_line"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Confirm New Password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <EditText
                    android:id="@+id/confirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/et_bottom_line"
                    android:ellipsize="end"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textLarge" />

                <ImageButton
                    android:id="@+id/forgotPassSubmit"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="30dp"
                    android:adjustViewBounds="true"
                    android:background="@color/landingBlack"
                    android:scaleType="fitCenter"
                    android:src="@drawable/tick" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</RelativeLayout>